# perishable

./: BLOG.md  README.md  pyproject.toml
src/perishable/: __init__.py  cli.py  enumeration.py  loss.py  markov.py  optimizer.py  state.py  transitions.py
src/shopping_simulator/: __init__.py  cli.py  enumeration.py  loss.py  markov.py  models.py  optimizer.py  simulator.py  transitions.py
