[project]
name = "perishable"
version = "0.1.0"
description = "Markov chain model for perishable inventory optimisation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pytest>=9.0.2",
]
